# etl_manager

./: .flake8  .gitignore  .python-version  .travis.yml  CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: lint.yml  poetry-pypi-release.yml  pythonpackage.yml  test.yml
etl_manager/: etl.py  extract_meta.py  extract_metadata.py  meta.py  utils.py
etl_manager/specs/: csv_quoted_nodate_specific.json  glue_spark_dict.json  json_specific.json  par_specific.json  regex_specific.json  table_schema.json
example/glue_jobs/simple_etl_job/: job.py
example/meta_data/db1/: database.json  employees.json  pay.json  teams.json
example_meta_data/: database.json  employees.json
meta_data/: database.json
mojdbtemplate/: etl.py  glue_job.py  meta.py  utils.py
mojdbtemplate/specs/: avro_specific.json  base.json  csv_specific.json  glue_job.json  orc_specific.json
tests/: __init__.py  mocked_responses.py  test_column_types.py  test_create_update_database_with_creds.py  test_extract_metadata.py  test_tests.py
tests/data/: gluejobutils_data_type_conversion.json
tests/data/data_types/: database.json  test_table.json
tests/data/data_types/table_data/: parquet_metadata_json.json  test_nest.parquet  test_table.jsonl  test_table_for_parquet.jsonl
tests/data/test_metadata/: database_expected.json  table1_expected.json  table2_expected.json
tests/test_metadata/: database_expected.json
