[tool]
[tool.poetry]
name = "etl_manager"
version = "7.3.0"
description = "A python package to manage etl processes on AWS"
license = "MIT"
authors = ["Karik Isichei <karik.isichei@digital.justice.gov.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.6"
boto3 = ">=1.9.205"
jsonschema = ">=3.0.0"
parameterized = "0.7.*"
regex = "^2020.7.14"


[tool.poetry.dev-dependencies]
flake8 = "^3.8.3"
black = {version = "^20.8b1", allow-prereleases = true}
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
